[tool.poetry]
name = "garnet-redis-storage"
version = "0.1.0"
description = "Redis storage for telegram-garnet"
authors = ["mpa <cat@snejugal.ru>"]
packages = [
    {include = "garnet_redis"}
]

[tool.poetry.dependencies]
python = "^3.7"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
